--- a/catissue_de_integration_client/clientInstall.properties
+++ b/catissue_de_integration_client/clientInstall.properties
@@ -1,32 +1,33 @@
 #Enter server port on which JBoss is listing the client request
 #Default port is 8080
-jboss.server.port=8443
+jboss.server.port=
+
+#Hostname or IP address of the machine on which the Catissue is deployed
+#CAUTION: This parameter should not be set to localhost. Set the actual hostname or IP address
+jboss.server.host=
+
+#Enter yes/no to specify Secure HTTP connection
+jboss.container.secure=
 
 #database type permissible values: oracle or mysql or mssqlserver
-database.type=mysql
+database.type=
 
 #Hostname or IP address of the machine on which the database server is running.
-database.host=localhost
+database.host=
 
 #Port number to connect with the database server
 #Default port for MySQL : 3306
 #Default Port for Oracle: 1521
-database.port=3306
+database.port=
 
 #Oracle TNS name, applicable only when database.type=oracle
-oracle.tns.name=orcl
+oracle.tns.name=
 
-database.name=catissuecore_new
-database.username=root
-database.password=root
+database.name=
+database.username=
+database.password=
 
-#Hostname or IP address of the machine on which the CAS server is running.
-#CAUTION: This parameter should not be set to localhost. Set the actual hostname or IP address
-jboss.server.host=10.88.199.50
-
-#Enter yes/no to specify Secure HTTP connection
-jboss.container.secure=yes
-
+#Application user name & password to be used in api.
 application.username=admin@admin.com
 application.password=Washu123
 
