* Task/Bug Id:  Bug 18924 -  Some of the JARS do not have SVN-URL information in the MANIFEST file * Code Reviewed By: Prachi Sharma, Janhavi Hasabnis On : 7.10.2010 * Technical Details:  Modified target in build.xml of caTissue and caTissuePrintWebService to contain SVN-URL information inside the MANIFEST file. * Unit tested:   N/A * Developer Notes: * Current Build++ Counts for this file : N/A * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 24789

--- a/build.xml
+++ b/build.xml
@@ -120,6 +120,10 @@
 				<include name="**/CatissueCdmsIntegrator.class"/>
     			<include name="**/CatissueCdmsURLInformationObject.class"/>
 			</fileset>
+			<manifest>
+				<attribute name="Build-on" value="${TODAY} ${TSTAMP}" />
+				<attribute name="SVN-URL" value="${dist.revision}" />
+			</manifest>
 		</jar>
 	</target>
 
@@ -135,6 +139,10 @@
 				<include name="**/LabelTokens.class"/>
 				<include name="**/TokenFactory.class"/>
 			</fileset>
+			<manifest>
+				<attribute name="Build-on" value="${TODAY} ${TSTAMP}" />
+				<attribute name="SVN-URL" value="${dist.revision}" />
+			</manifest>
 		</jar>
 	</target>
 
@@ -158,6 +166,10 @@
 			<exclude name="**/LabelTokens.class"/>
 			<exclude name="**/TokenFactory.class"/>
 		</fileset>
+		<manifest>
+			<attribute name="Build-on" value="${TODAY} ${TSTAMP}" />
+			<attribute name="SVN-URL" value="${dist.revision}" />
+		</manifest>
 	</jar>
 	</target>
 	<target name="PrintService_Client">
@@ -169,6 +181,10 @@
 				<include name="**/LabelPrinterFactory.class"/>
 	    		<include name="**/PropertyHandler.class"/>
 			</fileset>
+			<manifest>
+				<attribute name="Build-on" value="${TODAY} ${TSTAMP}" />
+				<attribute name="SVN-URL" value="${dist.revision}" />
+			</manifest>
 		</jar>
 		</target>
 
@@ -182,6 +198,10 @@
 			<!--<fileset dir="${target.dir}/edu/wustl/catissuecore/printservicemodule" >
 						<include  name="PrintServiceImplementor.properties" />
 			</fileset>-->
+			<manifest>
+				<attribute name="Build-on" value="${TODAY} ${TSTAMP}" />
+				<attribute name="SVN-URL" value="${dist.revision}" />
+			</manifest>
 		</jar>
 		</target>
 
@@ -707,8 +727,8 @@
 					<fileset dir="${base.dir}/catissue_de_integration_client" />
 				</copy>
 
-		<copy todir="${zip.dir}/caTissueSuite_Client" overwrite="true"> 
-              <fileset dir="${base.dir}/caTissueSuite_Client" /> 
+		<copy todir="${zip.dir}/caTissueSuite_Client" overwrite="true">
+              <fileset dir="${base.dir}/caTissueSuite_Client" />
         </copy>
 
 		<copy todir="${zip.dir}/BulkOperations" overwrite="true">
