--- a/CaTissueSuite_caGrid_Service/caTissueModel.properties
+++ b/CaTissueSuite_caGrid_Service/caTissueModel.properties
@@ -97,3 +97,8 @@ edu.wustl.catissuecore.domain.TissueSpecimenRequirement=xxTargetAliasxx.labelFor
 edu.wustl.catissuecore.domain.TissueSpecimenReviewEventParameters=xxTargetAliasxx.neoplasticCellularityPercentage,xxTargetAliasxx.necrosisPercentage,xxTargetAliasxx.lymphocyticPercentage,xxTargetAliasxx.totalCellularityPercentage,xxTargetAliasxx.histologicalQuality,xxTargetAliasxx.timestamp,xxTargetAliasxx.comment,xxTargetAliasxx.id,xxTargetAliasxx.specimenCollectionGroup.id,xxTargetAliasxx.specimen.id
 edu.wustl.catissuecore.domain.TransferEventParameters=xxTargetAliasxx.fromPositionDimensionOne,xxTargetAliasxx.fromPositionDimensionTwo,xxTargetAliasxx.toPositionDimensionOne,xxTargetAliasxx.toPositionDimensionTwo,xxTargetAliasxx.timestamp,xxTargetAliasxx.comment,xxTargetAliasxx.id,xxTargetAliasxx.specimenCollectionGroup.id,xxTargetAliasxx.specimen.id
 edu.wustl.catissuecore.domain.User=xxTargetAliasxx.emailAddress,xxTargetAliasxx.firstName,xxTargetAliasxx.lastName,xxTargetAliasxx.loginName,xxTargetAliasxx.startDate,xxTargetAliasxx.activityStatus,xxTargetAliasxx.firstTimeLogin,xxTargetAliasxx.csmUserId,xxTargetAliasxx.comments,xxTargetAliasxx.wustlKey,xxTargetAliasxx.id
+edu.wustl.catissuecore.domain.StudyFormContext=xxTargetAliasxx.noOfEntries,xxTargetAliasxx.id
+edu.wustl.catissuecore.domain.deintegration.ParticipantRecordEntry=xxTargetAliasxx.id
+edu.wustl.catissuecore.domain.deintegration.SCGRecordEntry=xxTargetAliasxx.id
+edu.wustl.catissuecore.domain.deintegration.SpecimenRecordEntry=xxTargetAliasxx.id
+
