--- a/CaTissueSuite_caGrid_Service/deploy.properties
+++ b/CaTissueSuite_caGrid_Service/deploy.properties
@@ -1,7 +1,7 @@
 #Service Deployment Properties
-#Mon Aug 11 11:39:19 GMT+05:30 2008
+#Fri Oct 15 11:11:05 GMT+05:30 2010
 index.service.index.refresh_milliseconds=300000
 perform.index.service.registration=true
-index.service.url=http\://index.training.cagrid.org\:8080/wsrf/services/DefaultIndexService
+index.service.url=http\://cagrid-index.nci.nih.gov\:8080/wsrf/services/DefaultIndexService
 service.deployment.prefix=cagrid
 index.service.registration.refresh_seconds=600
