--- a/CaTissueSuite_caGrid_Service/service.properties
+++ b/CaTissueSuite_caGrid_Service/service.properties
@@ -1,8 +1,8 @@
 #service deployment properties
-#Mon Aug 11 11:39:31 GMT+05:30 2008
+#Fri Oct 15 11:11:34 GMT+05:30 2010
 dataService_domainModelValidatorClass=gov.nih.nci.cagrid.data.cql.validation.DomainModelValidator
 dataService_cqlValidatorClass=gov.nih.nci.cagrid.data.cql.validation.ObjectWalkingCQLValidator
-cqlQueryProcessorConfig_appserviceUrl=http\://host\:port/catissuecore/http/remoteService
+cqlQueryProcessorConfig_appserviceUrl=http\://10.88.199.50\:28080/catissuecore/http/remoteService
 dataService_validateCqlFlag=false
 serverConfigLocation=server-config.wsdd
 queryProcessorClass=gov.nih.nci.cagrid.data.sdk32query.HQLCoreQueryProcessor
