--- a/build.xml
+++ b/build.xml
@@ -740,6 +740,10 @@
 		<copy todir="${zip.dir}/CaTissueSuite_caGrid_Service" overwrite="true">
 			<fileset dir="${base.dir}/CaTissueSuite_caGrid_Service" />
 		</copy>
+
+		<copy todir="${zip.dir}/de_cagrid_services" overwrite="true">
+			<fileset dir="${base.dir}/de_cagrid_services" />
+		</copy>
 		<!--- caTIES related files  start-->
 		<copy todir="${zip.dir}/caTIES_conf" overwrite="true">
 			<fileset dir="${base.dir}/caTIES_conf" />
