--- a/de_cagrid_services/pathologySCG_caGrid_Service/service.properties
+++ b/de_cagrid_services/pathologySCG_caGrid_Service/service.properties
@@ -2,7 +2,7 @@
 #Fri Oct 15 15:52:36 GMT+05:30 2010
 dataService_domainModelValidatorClass=gov.nih.nci.cagrid.data.cql.validation.DomainModelValidator
 dataService_cqlValidatorClass=gov.nih.nci.cagrid.data.cql.validation.ObjectWalkingCQLValidator
-cqlQueryProcessorConfig_appserviceUrl=http\://10.88.199.50\:28080/pathologySCG/http/remoteService
+cqlQueryProcessorConfig_appserviceUrl=https\://host\:port/pathologySCG/http/remoteService
 dataService_validateCqlFlag=false
 serverConfigLocation=server-config.wsdd
 queryProcessorClass=gov.nih.nci.cagrid.data.sdk32query.HQLCoreQueryProcessor
