--- a/de_cagrid_services/pathologySpecimen_caGrid_Service/service.properties
+++ b/de_cagrid_services/pathologySpecimen_caGrid_Service/service.properties
@@ -2,7 +2,7 @@
 #Tue Oct 12 21:34:11 GMT+05:30 2010
 dataService_domainModelValidatorClass=gov.nih.nci.cagrid.data.cql.validation.DomainModelValidator
 dataService_cqlValidatorClass=gov.nih.nci.cagrid.data.cql.validation.ObjectWalkingCQLValidator
-cqlQueryProcessorConfig_appserviceUrl=http\://10.88.199.50\:28080/pathologySpecimen/http/remoteService
+cqlQueryProcessorConfig_appserviceUrl=http\://host\:port/pathologySpecimen/http/remoteService
 dataService_validateCqlFlag=false
 serverConfigLocation=server-config.wsdd
 queryProcessorClass=gov.nih.nci.cagrid.data.sdk32query.HQLCoreQueryProcessor
