--- a/CaTissueSuite_caGrid_Service/introduce.properties
+++ b/CaTissueSuite_caGrid_Service/introduce.properties
@@ -1,11 +1,11 @@
 #Introduce Properties
-#Fri Oct 15 11:12:09 GMT+05:30 2010
+#Tue Oct 26 18:12:08 GMT+05:30 2010
 introduce.skeleton.services.list=CaTissueSuite
 introduce.skeleton.extensions=cagrid_metadata,data
-introduce.skeleton.timestamp=1287121329816
+introduce.skeleton.timestamp=1288096928387
 introduce.skeleton.service.name=CaTissueSuite
 introduce.skeleton.resource.options=main,singleton,identifiable,resourcePropertyManagement
-introduce.skeleton.destination.dir=C\:\\Documents and Settings\\pavan_kalantri\\CaTissueSuite
+introduce.skeleton.destination.dir=C\:\\Documents and Settings\\pavan_kalantri\\services\\CaTissueSuite
 introduce.skeleton.namespace.domain=http\://catissuecore.wustl.edu/CaTissueSuite
 introduce.soap.binding.excludes=\ gme\://caCORE.caCORE/3.2/edu.wustl.catissuecore.domain.deintegration gme\://caCORE.caCORE/3.2/edu.wustl.catissuecore.domain.shippingtracking gme\://caCORE.caCORE/3.2/edu.wustl.catissuecore.domain gme\://caCORE.caCORE/3.2/edu.wustl.catissuecore.domain.pathology
 introduce.ns.excludes=\ -x gme\://caGrid.caBIG/1.0/gov.nih.nci.cagrid.metadata.service -x gme\://caCORE.caCORE/3.2/edu.wustl.catissuecore.domain.deintegration -x gme\://caGrid.caBIG/1.0/gov.nih.nci.cagrid.metadata -x http\://gov.nih.nci.cagrid.data/DataServiceExceptions -x gme\://caCORE.caCORE/3.2/edu.wustl.catissuecore.domain.shippingtracking -x gme\://caCORE.caCORE/3.2/edu.wustl.catissuecore.domain -x gme\://caCORE.caCORE/3.2/edu.wustl.catissuecore.domain.pathology -x gme\://caGrid.caBIG/1.0/gov.nih.nci.cagrid.metadata.security -x gme\://caGrid.caBIG/1.0/gov.nih.nci.cagrid.metadata.common
