* Task/Bug Id: <Development task name or bug id> * Code Reviewed By: Sagar Baldwa On : <Review date> * Technical Details:  Commenting the target to copy de-Grid-service to the zip, as this is not a part of the caTissueInstallable for V1.2, if any one needs it, he has to download it separately. * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 24919

--- a/build.xml
+++ b/build.xml
@@ -740,10 +740,10 @@
 		<copy todir="${zip.dir}/CaTissueSuite_caGrid_Service" overwrite="true">
 			<fileset dir="${base.dir}/CaTissueSuite_caGrid_Service" />
 		</copy>
-
-		<copy todir="${zip.dir}/de_cagrid_services" overwrite="true">
+		<!-- DE grid service is not avaialbel in this buid so commenting this target -->
+		<!--<copy todir="${zip.dir}/de_cagrid_services" overwrite="true">
 			<fileset dir="${base.dir}/de_cagrid_services" />
-		</copy>
+		</copy>-->
 		<!--- caTIES related files  start-->
 		<copy todir="${zip.dir}/caTIES_conf" overwrite="true">
 			<fileset dir="${base.dir}/caTIES_conf" />
