* Task/Bug Id: removing the sql server refrences and some site specific files from the caTissue * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 25244

--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -11,7 +11,13 @@ jboss.server.name=default
 #Default port is 8080
 jboss.server.port=8080
 
-#database type permissible values: oracle or mysql or mssqlserver
+#Hostname or IP address of the machine on which the JBoss server is running.
+#CAUTION: This parameter should not be set to localhost. Set the actual hostname or IP address
+jboss.server.host=localhost
+#Enter yes/no to specify Secure HTTP connection
+jboss.container.secure=
+
+#database type permissible values: oracle or mysql
 database.type=
 
 #Hostname or IP address of the machine on which the database server is running.
@@ -20,7 +26,6 @@ database.host=
 #Port number to connect with the database server
 #Default port for MySQL : 3306
 #Default Port for Oracle: 1521
-#Default Port for MsSQLServer: 1433
 database.port=
 
 #Oracle TNS name, applicable only when database.type=oracle
@@ -43,9 +48,6 @@ cas.jboss.port=
 cas.jboss.container.secure=
 #CAS is deployed on HTTPS server then Specify the .keystore file path of CAS server.
 cas.server.keystore.path=
-
-#MsSqlServer database schema name, applicable only when database.type=mssqlserver
-database.schemaname=
 
 email.administrative.emailAddress=
 email.sendEmailFrom.emailAddress=
@@ -78,11 +80,7 @@ first.admin.password=Login123
 
 #Enter path for the MMTx home directory
 caties.mmtx.home=
-#Hostname or IP address of the machine on which the JBoss server is running.
-#CAUTION: This parameter should not be set to localhost. Set the actual hostname or IP address
-jboss.server.host=localhost
-#Enter yes/no to specify Secure HTTP connection
-jboss.container.secure=
+
 
 #Values for DE API
 caCORE.jBoss.home.dir=
